started CSS and HTML files, completed HTML head, CSS reset and general styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- BROWSER TAB IMAGE LINK<link rel=“icon” href=“” type=“image/gif” sizes=“16x16”> -->
+    <title>John Vehmeyer</title>
+    <!-- link to Google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- link to CSS stylesheet -->
+    <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    
+    <header>
+        <h1>JOHN VEHMEYER</h1>
+        <nav class="header-nav">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Projects</a>
+        </nav>
+    </header>
 </body>
 </html>
