--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +11,38 @@
     <!-- link to CSS stylesheet -->
     <link rel="stylesheet" href="/style/index.css">
 </head>
+
 <body>
     <header>
         <h1>JOHN VEHMEYER</h1>
-        <nav class="header-nav">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Projects</a>
+        <nav>
+            <button><a href="index.html">Home</button>
+            <button><a href="about.html">About</button>
+            <button><a href="contact.html">Contact</button>
+            <button><a href="projects.html">Projects</button>
         </nav>
     </header>
+    <section class="section-one">
+        <h2>INTRODUCING MY SITE</h2>
+        <P>TEXT FILLER</P>
+    </section>
+    <section class="section-two">
+        <!-- Empty section, background image goes here -->
+    </section>
+    <section class="section-three">
+        <div class="section-three-images">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <p>TEXT FILLER</p>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <a href="contact.html">Contact Me</a>
+        </nav>
+    </footer>
 </body>
+
 </html>
