--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- BROWSER TAB IMAGE LINK<link rel=“icon” href=“” type=“image/gif” sizes=“16x16”> -->
+    <title>John Vehmeyer</title>
+    <!-- link to Google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt&family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- link to CSS stylesheet -->
+    <link rel="stylesheet" href="/style/index.css">
 </head>
+
 <body>
-    <h1> PROJECTS </h1>
+    <header>
+        <h1>JOHN VEHMEYER</h1>
+        <nav class="header-nav">
+            <button><a href="index.html">Home</button>
+            <button><a href="about.html">About</a>
+            <button><a href="contact.html">Contact</a>
+            <button><a href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="section-one">
+        <h2>Projects</h2>
+        <!-- <P>TEXT FILLER</P> -->
+    </section>
+    <!-- <section class="section-two">
+        Empty section, background image goes here
+    </section>
+    <section class="section-three">
+        <div class="section-three-images">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <p>TEXT FILLER</p>
+        </div>
+    </section>-->
+    <footer>
+        <nav>
+            <a href="contact.html">Contact Me</a>
+        </nav>
+    </footer>
 </body>
 </html>
