added styling to footer

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
         </div>
     </section>
     <footer>
-        <nav>
-            <a href="contact.html">Contact Me</a>
+        <div class="footer-div">
+        <nav class="footer">
+           <button class="footer-button"><a href="contact.html">Contact Me</button>
         </nav>
+    </div>
     </footer>
 </body>
 
