added section-one styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         </nav>
     </header>
     <section class="section-one">
-        <h2>INTRODUCING MY SITE</h2>
-        <P>TEXT FILLER</P>
+        <div>
+            <h2>INTRODUCING MY SITE</h2>
+            <P>Full stack developer</P>
+        </div>
     </section>
     <section class="section-two">
         <!-- Empty section, background image goes here -->
@@ -35,7 +37,9 @@
             <img src="https://images.unsplash.com/photo-1447433819943-74a20887a81e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1975&q=80" alt="image of outer space">
             <img src="https://images.unsplash.com/photo-1539321908154-04927596764d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1955&q=80" alt="image of Andromeda">
             <img src="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1427&q=80" alt="image of nebula">
-            <p>Projects</p>
+            <p>
+            
+            </p>
         </div>
     </section>
     <footer>
