--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
     <!-- link to CSS stylesheet -->
     <link rel="stylesheet" href="/style/index.css">
 </head>
-
 <body>
     <header>
         <h1>JOHN VEHMEYER</h1>
@@ -22,23 +21,10 @@
             <button><a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="section-one">
+    <section>
         <h2>Projects</h2>
-        <!-- <P>TEXT FILLER</P> -->
     </section>
-    <!-- <section class="section-two">
-        Empty section, background image goes here
-    </section>
-    <section class="section-three">
-        <div class="section-three-images">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <p>TEXT FILLER</p>
-        </div>
-    </section>-->
-    <footer>
+      <footer>
         <nav>
             <a href="contact.html">Contact Me</a>
         </nav>
