--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="section-one">
         <div>
             <h2>INTRODUCING MY SITE</h2>
-            <P>Full stack developer</P>
+            <p>Full stack developer</p>
         </div>
     </section>
     <section class="section-two">
@@ -37,9 +37,7 @@
             <img src="https://images.unsplash.com/photo-1447433819943-74a20887a81e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1975&q=80" alt="image of outer space">
             <img src="https://images.unsplash.com/photo-1539321908154-04927596764d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1955&q=80" alt="image of Andromeda">
             <img src="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1427&q=80" alt="image of nebula">
-            <p>
-            
-            </p>
+            <p>Text goes here to describe all of the projects to the left</p>
         </div>
     </section>
     <footer>
