fixed broken links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header>
         <h1>JOHN VEHMEYER</h1>
         <nav>
-            <button><a href="index.html">Home</button>
-            <button><a href="about.html">About</button>
-            <button><a href="contact.html">Contact</button>
-            <button><a href="projects.html">Projects</button>
+             <a href="index.html">Home</a>
+             <a href="about.html">About</a>
+             <a href="contact.html">Contact</a>
+             <a href="projects.html">Projects</a>    
         </nav>
     </header>
     <section class="section-one">
@@ -43,7 +43,7 @@
     <footer>
         <div class="footer-div">
         <nav class="footer">
-           <button class="footer-button"><a href="contact.html">Contact Me</button>
+           <a class="footer-button" href="contact.html">Contact Me</a>
         </nav>
     </div>
     </footer>
