--- a/about.html
+++ b/about.html
@@ -15,16 +15,12 @@
 <body>
     <header>
         <h1>JOHN VEHMEYER</h1>
-        <nav class="header-nav">
-            <button><a href="index.html">Home</button>
-            <button><a href="about.html">About</a>
-            <button><a href="contact.html">Contact</a>
-            <button><a href="projects.html">Projects</a>
-        </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>    
+       </nav>
     </header>
-    <section class="section-one">
-        <h2>INTRODUCING MY SITE</h2>
-        <P>TEXT FILLER</P>
-    </section>
 </body>
 </html>
