--- a/contact.html
+++ b/contact.html
@@ -15,33 +15,20 @@
 <body>
     <header>
         <h1>JOHN VEHMEYER</h1>
-        <nav class="header-nav">
-            <button><a href="index.html">Home</button>
-            <button><a href="about.html">About</a>
-            <button><a href="contact.html">Contact</a>
-            <button><a href="projects.html">Projects</a>
-        </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>    
+       </nav>
     </header>
     <section class="contact-page">
-        <h2>Contact</h2>
-        <a href="mailto:j.vehmeyer@gmail.com?subject=Mail from Our Site">Email Me</a>  
-    </section>
-    <!-- <section class="section-two">
-        Empty section, background image goes here
-    </section>
-    <section class="section-three">
-        <div class="section-three-images">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <p>TEXT FILLER</p>
-        </div>
-    </section>
-    <footer>
-        <nav>
-            <a href="contact.html">Contact Me</a>
-        </nav>
-    </footer> -->
+        <h2>Contact</h2> 
+        <br>
+
+        <div class="container-contact">
+        <a href="mailto:j.vehmeyer@gmail.com?subject=Mail from Our Site">Email Me</a> 
+        </div>   
+     </section>
 </body>
 </html>
