--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- BROWSER TAB IMAGE LINK<link rel=“icon” href=“” type=“image/gif” sizes=“16x16”> -->
     <title>John Vehmeyer</title>
     <!-- link to Google fonts -->
@@ -14,38 +14,50 @@
 
 <body>
     <header>
-        <h1>JOHN VEHMEYER</h1>
         <nav>
-             <a href="index.html">Home</a>
-             <a href="about.html">About</a>
-             <a href="contact.html">Contact</a>
-             <a href="projects.html">Projects</a>    
+            <h1>JOHN VEHMEYER</h1>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="projects.html">Projects</a>
+            </div>
         </nav>
     </header>
     <section class="section-one">
-        <div>
+        <div class="intro-text">
             <h2>INTRODUCING MY SITE</h2>
-            <p>Full stack developer</p>
+            <p>Full stack developer. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo commodi labore illum.
+                Eveniet, id exercitationem vitae alias, obcaecati nulla explicabo, non assumenda reiciendis neque
+                dolorum magnam culpa ex? Adipisci, rem.</p>
         </div>
     </section>
     <section class="section-two">
-        <!-- Empty section, background image goes here -->
+        <div class="bk-img">
+            <!-- Empty section, background image goes here -->
+        </div>
     </section>
     <section class="section-three">
         <div class="section-three-images">
-            <img src="https://images.unsplash.com/photo-1570556319136-3cfc640168a4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=882&q=80" alt="image of Milky Way">
-            <img src="https://images.unsplash.com/photo-1447433819943-74a20887a81e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1975&q=80" alt="image of outer space">
-            <img src="https://images.unsplash.com/photo-1539321908154-04927596764d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1955&q=80" alt="image of Andromeda">
-            <img src="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1427&q=80" alt="image of nebula">
-            <p>Text goes here to describe all of the projects to the left</p>
+            <img src="https://images.unsplash.com/photo-1570556319136-3cfc640168a4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=882&q=80"
+                alt="image of Milky Way">
+            <img src="https://images.unsplash.com/photo-1447433819943-74a20887a81e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1975&q=80"
+                alt="image of outer space">
+            <img src="https://images.unsplash.com/photo-1539321908154-04927596764d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1955&q=80"
+                alt="image of Andromeda">
+            <img src="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1427&q=80"
+                alt="image of nebula">
+            <div class="section-three-text">
+                <p>Text goes here to describe all of the projects to the left</p>
+            </div>
+        </div>
         </div>
     </section>
     <footer>
-        <div class="footer-div">
-        <nav class="footer">
-           <a class="footer-button" href="contact.html">Contact Me</a>
-        </nav>
-    </div>
+            <nav>
+                <a class="footer-button" href="contact.html">Contact Me</a>
+            </nav>
     </footer>
 </body>
+
 </html>
