fixed footer issues for desktop view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="header-nav">
             <h1>JOHN VEHMEYER</h1>
             <div class="links">
                 <a href="index.html">Home</a>
@@ -64,7 +64,7 @@
             <a href="#">Contact Me</a>
            </nav>
         </div>
-      </footer>  
-</body>
+    </footer>  
 
+</body>
 </html>
